jobs: code cleanup.