@@ -4,11 +4,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.StringWriter;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.Vector;
+import java.util.*;
 
 import cloudgene.mapred.apps.Application;
 import cloudgene.mapred.apps.ApplicationRepository;
@@ -21,31 +17,31 @@ import genepi.io.FileUtil;
 
 public class CloudgeneContext extends WorkflowContext {
 
-	private String localTemp;
+	private final String localTemp;
 
-	private String localOutput;
+	private final String localOutput;
 
-	private String workingDirectory;
+	private final String workingDirectory;
 
-	private Settings settings;
+	private final Settings settings;
 
-	private User user;
+	private final User user;
 
-	private Map<String, CloudgeneParameterInput> inputParameters;
+	private final Map<String, CloudgeneParameterInput> inputParameters;
 
-	private Map<String, CloudgeneParameterOutput> outputParameters;
+	private final Map<String, CloudgeneParameterOutput> outputParameters;
 
-	private Map<String, Integer> counters = new HashMap<String, Integer>();
+	private final Map<String, Integer> counters = new HashMap<>();
 
-	private Map<String, String> values = new HashMap<String, String>();
+	private final Map<String, String> values = new HashMap<>();
 
-	private Map<String, Boolean> submitCounters = new HashMap<String, Boolean>();
+	private final Map<String, Boolean> submitCounters = new HashMap<>();
 
-	private Map<String, Boolean> submitValues = new HashMap<String, Boolean>();
+	private final Map<String, Boolean> submitValues = new HashMap<>();
 
-	private CloudgeneJob job;
+	private final CloudgeneJob job;
 
-	private Map<String, Object> data = new HashMap<String, Object>();
+	private final Map<String, Object> data = new HashMap<>();
 
 	private Map<String, Object> config;
 
@@ -64,20 +60,18 @@ public class CloudgeneContext extends WorkflowContext {
 		localOutput = new File(job.getLocalWorkspace()).getAbsolutePath();
 		localTemp = new File(FileUtil.path(job.getLocalWorkspace(), "temp")).getAbsolutePath();
 
-		inputParameters = new HashMap<String, CloudgeneParameterInput>();
+		inputParameters = new HashMap<>();
 		for (CloudgeneParameterInput param : job.getInputParams()) {
 			inputParameters.put(param.getName(), param);
 		}
 
-		outputParameters = new HashMap<String, CloudgeneParameterOutput>();
+		outputParameters = new HashMap<>();
 		for (CloudgeneParameterOutput param : job.getOutputParams()) {
 			outputParameters.put(param.getName(), param);
 		}
 
 		settings = job.getSettings();
-
 	}
-
 
 	public boolean resolveAppLinks() throws IOException {
 
@@ -103,9 +97,12 @@ public class CloudgeneContext extends WorkflowContext {
 				throw new IOException("Application " + linkedAppId + " is not installed or wrong permissions.");
 			}
 			// update environment variables
-			Environment environment = settings.buildEnvironment().addApplication(linkedApp.getWdlApp())
+			Environment environment = settings.buildEnvironment()
+					.addApplication(linkedApp.getWdlApp())
 					.addContext(this);
+
 			Map<String, Object> properties = linkedApp.getWdlApp().getProperties();
+
 			for (String property : properties.keySet()) {
 				Object propertyValue = properties.get(property);
 				if (propertyValue instanceof String) {
@@ -115,24 +112,22 @@ public class CloudgeneContext extends WorkflowContext {
 			}
 
 			setData(input.getName(), properties);
-
 		}
 
 		return true;
-
 	}
 
+	@Override
 	public String getInput(String param) {
-
-		if (inputParameters.get(param) != null) {
-
-			return inputParameters.get(param).getValue();
-
+		CloudgeneParameterInput input = inputParameters.get(param);
+		if (input != null) {
+			return input.getValue();
 		} else {
 			return null;
 		}
 	}
 
+	@Override
 	public String getJobId() {
 		return job.getId();
 	}
@@ -141,20 +136,17 @@ public class CloudgeneContext extends WorkflowContext {
 		return job.getPublicJobId();
 	}
 
+	@Override
 	public String getOutput(String param) {
-
-		if (outputParameters.get(param) != null) {
-
-			return outputParameters.get(param).getValue();
-
+		CloudgeneParameterOutput output = outputParameters.get(param);
+		if (output != null) {
+			return output.getValue();
 		} else {
-
 			return null;
-
 		}
-
 	}
 
+	@Override
 	public String get(String param) {
 		String result = getInput(param);
 		if (result == null) {
@@ -168,6 +160,7 @@ public class CloudgeneContext extends WorkflowContext {
 		return settings;
 	}
 
+	@Override
 	public String getLocalTemp() {
 		return localTemp;
 	}
@@ -176,6 +169,7 @@ public class CloudgeneContext extends WorkflowContext {
 		return localOutput;
 	}
 
+	@Override
 	public void println(String line) {
 		job.writeOutputln(line);
 	}
@@ -183,11 +177,14 @@ public class CloudgeneContext extends WorkflowContext {
 	public void log(String line, Exception e) {
 		StringWriter sw = new StringWriter();
 		PrintWriter pw = new PrintWriter(sw);
+
 		e.printStackTrace(pw);
-		String sStackTrace = sw.toString(); // stack trace as a string
+		String sStackTrace = sw.toString();
+
 		job.writeLog(line + "\n" + sStackTrace);
 	}
 
+	@Override
 	public void log(String line) {
 		job.writeLog(line);
 	}
@@ -201,6 +198,7 @@ public class CloudgeneContext extends WorkflowContext {
 		return job.getName();
 	}
 
+	@Override
 	public String getWorkingDirectory() {
 		return workingDirectory;
 	}
@@ -209,92 +207,76 @@ public class CloudgeneContext extends WorkflowContext {
 		return user;
 	}
 
+	@Override
 	public boolean sendMail(String subject, String body) throws Exception {
-		Settings settings = getSettings();
-
-		if (settings.getMail() != null) {
-
-			MailUtil.send(settings.getMail().get("smtp"), settings.getMail().get("port"),
-					settings.getMail().get("user"), settings.getMail().get("password"), settings.getMail().get("name"),
-					user.getMail(), "[" + settings.getName() + "] " + subject, body);
-
-		}
-
-		return true;
-
+		return sendMail(user.getMail(), subject, body);
 	}
 
+	@Override
 	public boolean sendMail(String to, String subject, String body) throws Exception {
 		Settings settings = getSettings();
 
 		if (settings.getMail() != null) {
-
-			MailUtil.send(settings.getMail().get("smtp"), settings.getMail().get("port"),
-					settings.getMail().get("user"), settings.getMail().get("password"), settings.getMail().get("name"),
-					to, "[" + settings.getName() + "] " + subject, body);
-
+			MailUtil.send(
+					settings.getMail().get("smtp"),
+					settings.getMail().get("port"),
+					settings.getMail().get("user"),
+					settings.getMail().get("password"),
+					settings.getMail().get("name"),
+					to,
+					"[" + settings.getName() + "] " + subject,
+					body);
 		}
-		return true;
 
+		return true;
 	}
 
 	@Override
-	public boolean sendNotification(String text) throws Exception {
-		return true;
-	}
-
 	public Set<String> getInputs() {
 		return inputParameters.keySet();
 	}
 
+	/**
+	 * @return The names of all available outputs.
+	 */
 	public Set<String> getOutputs() {
 		return outputParameters.keySet();
 	}
 
-	public void setInput(String input, String value) {
-
-		CloudgeneParameterInput parameter = inputParameters.get(input);
-		parameter.setValue(value);
-	}
-
-	public void setOutput2(String input, String value) {
-
-		CloudgeneParameterOutput parameter = outputParameters.get(input);
-		parameter.setValue(value);
-
-	}
-
+	@Override
 	public void incCounter(String name, int value) {
-
-		Integer oldvalue = counters.get(name);
-		if (oldvalue == null) {
-			oldvalue = 0;
+		Integer oldCount = counters.get(name);
+		if (oldCount == null) {
+			oldCount = 0;
 		}
-		log("Increment counter " + name + " by " + value);
-		counters.put(name, oldvalue + value);
+		Integer newCount = oldCount + value;
 
+		log(String.format("Increment counter '%s': %,d + %,d = %,d", name, oldCount, value, newCount));
+		counters.put(name, newCount);
 	}
 
+	@Override
 	public void submitCounter(String name) {
-		log("Submit counter " + name);
+		log("Submit counter: '" + name + "'");
 		submitCounters.put(name, true);
 	}
 
 	public Map<String, Integer> getSubmittedCounters() {
-		Map<String, Integer> result = new HashMap<String, Integer>();
+		Map<String, Integer> result = new HashMap<>();
 		for (String counter : submitCounters.keySet()) {
 			result.put(counter, counters.get(counter));
 		}
 		return result;
 	}
 
+	@Override
 	public Map<String, Integer> getCounters() {
 		return counters;
 	}
 
 	public void setValue(String name, String value) {
 		log("Set value " + name + " to " + value);
-		values.put(name,  value);
+		values.put(name, value);
 	}
 
 	public void submitValue(String name) {
@@ -303,7 +285,7 @@ public class CloudgeneContext extends WorkflowContext {
 	}
 
 	public Map<String, String> getSubmittedValues() {
-		Map<String, String> result = new HashMap<String, String>();
+		Map<String, String> result = new HashMap<>();
 		for (String name : submitValues.keySet()) {
 			result.put(name, values.get(name));
 		}
@@ -314,43 +296,14 @@ public class CloudgeneContext extends WorkflowContext {
 		return values;
 	}
 
-	public String createLinkToFile(String id) {
-
-		CloudgeneParameterOutput out = outputParameters.get(id);
-
-		if (out != null) {
-
-			return "<a href=\"/results/" + job.getId() + "/" + out.getName() + "/" + out.getName() + ".txt" + "\">"
-					+ out.getName() + ".txt" + "</a>";
-
-		} else {
-			return "[PARAMETER UNKOWN!]";
-		}
-
-	}
-
-	public String createLinkToFile(String id, String filename) {
-
-		CloudgeneParameterOutput out = outputParameters.get(id);
-
-		if (out != null) {
-
-			return "<a href=\"/results/" + job.getId() + "/" + out.getName() + "/" + filename + "\">" + filename
-					+ "</a>";
-
-		} else {
-			return "[PARAMETER UNKOWN!]";
-		}
-
-	}
-
 	public Step getCurrentStep() {
 		if (job.getSteps().isEmpty()) {
 			return createStep("Steps");
 		}
-		return job.getSteps().get(job.getSteps().size() -1);
+		return job.getSteps().getLast();
 	}
 
+	@Override
 	public void message(String message, int type) {
 		message(getCurrentStep(), message, type);
 	}
@@ -360,26 +313,11 @@ public class CloudgeneContext extends WorkflowContext {
 
 		List<Message> logs = step.getLogMessages();
 		if (logs == null) {
-			logs = new Vector<Message>();
+			logs = new ArrayList<>();
 			step.setLogMessages(logs);
 		}
 		logs.add(status);
 
-	}
-
-	public void beginTask(String name) {
-		beginTask(getCurrentStep(), name);
-	}
-
-	public void beginTask(Step step, String name) {
-		Message status = new Message(step, Message.RUNNING, name);
-
-		List<Message> logs = step.getLogMessages();
-		if (logs == null) {
-			logs = new Vector<Message>();
-			step.setLogMessages(logs);
-		}
-		logs.add(status);
 	}
 
 	public Message createTask(String name) {
@@ -391,57 +329,49 @@ public class CloudgeneContext extends WorkflowContext {
 
 		List<Message> logs = step.getLogMessages();
 		if (logs == null) {
-			logs = new Vector<Message>();
+			logs = new ArrayList<>();
 			step.setLogMessages(logs);
 		}
 		logs.add(status);
 		return status;
 	}
 
-	public void beginTask(String name, int totalWork) {
+	@Override
+	public void beginTask(String name) {
 		beginTask(getCurrentStep(), name);
 	}
 
-	public void beginTask(Step step, String name, int totalWork) {
-		beginTask(step, name);
+	public void beginTask(Step step, String name) {
+		Message status = new Message(step, Message.RUNNING, name);
+
+		List<Message> logs = step.getLogMessages();
+		if (logs == null) {
+			logs = new ArrayList<>();
+			step.setLogMessages(logs);
+		}
+		logs.add(status);
 	}
 
-	public void endTask(String message, int type) {
-		endTask(getCurrentStep(), message, type);
-	}
-
-	public void endTask(Step step, String message, int type) {
-		Message status = step.getLogMessages().get(step.getLogMessages().size() - 1);
-		status.setType(type);
-		status.setMessage(message);
-	}
-
+	@Override
 	public void updateTask(String message, int type) {
 		updateTask(getCurrentStep(), message, type);
 	}
 
 	public void updateTask(Step step, String message, int type) {
-		Message status = step.getLogMessages().get(step.getLogMessages().size() - 1);
+		Message status = step.getLogMessages().getLast();
 		status.setType(type);
 		status.setMessage(message);
 	}
 
-	public void updateTask(String message) {
-		updateTask(getCurrentStep(), message);
+	@Override
+	public void endTask(String message, int type) {
+		endTask(getCurrentStep(), message, type);
 	}
 
-	public void updateTask(Step step, String message) {
-		Message status = step.getLogMessages().get(step.getLogMessages().size() - 1);
-		status.setMessage(message);
-	}
-
-	public void endTask(int type) {
-		endTask(getCurrentStep(), type);
-	}
-
-	public void endTask(Step step, int type) {
-		Message status = step.getLogMessages().get(step.getLogMessages().size() - 1);
+	public void endTask(Step step, String message, int type) {
+		Message status = step.getLogMessages().getLast();
 		status.setType(type);
+		status.setMessage(message);
 	}
 
 	public Step createStep(String name) {
@@ -452,18 +382,17 @@ public class CloudgeneContext extends WorkflowContext {
 		return outputStep;
 	}
 
-
+	@Override
 	public Object getData(String key) {
 		return data.get(key);
 	}
 
-	public void setData(String key, Object object) {
-		data.put(key, object);
+	public Map<String, Object> getData() {
+		return data;
 	}
 
-	@Override
-	public void setConfig(Map<String, Object> config) {
-		this.config = config;
+	public void setData(String key, Object object) {
+		data.put(key, object);
 	}
 
 	@Override
@@ -477,15 +406,11 @@ public class CloudgeneContext extends WorkflowContext {
 	}
 
 	@Override
-	public String getHdfsTemp() {
-		throw new RuntimeException("Not support in cg3");
+	public void setConfig(Map<String, Object> config) {
+		this.config = config;
 	}
 
-	public Map<String, Object> getData() {
-		return data;
-	}
-
-	public void incStepCounter(){
+	public void incStepCounter() {
 		stepCounter++;
 	}
 
